Saving after creating a failsafe for the "Decho<...>()" functions

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -60,6 +60,9 @@ __BU_COLOR_CODE_ERROR="$(WriteTextColor "196")"
 # Highlighted text display color		| Default color : "6"	(cyan)
 __BU_COLOR_CODE_HIGHLIGHT="$(WriteTextColor "6")"
 
+# Newstep text display color            | Default color : "166" (orange)
+__BU_COLOR_NEWSTEP="$(WriteTextColors "166")"
+
 # Reset color to terminal's default text color | Always "tput sgr0"
 __BU_COLOR_CODE_RESET="$(tput sgr0)"
 
