--- a/config/colors.conf
+++ b/config/colors.conf
@@ -61,7 +61,7 @@ __BU_COLOR_CODE_ERROR="$(WriteTextColor "196")"
 __BU_COLOR_CODE_HIGHLIGHT="$(WriteTextColor "6")"
 
 # Newstep text display color            | Default color : "166" (orange)
-__BU_COLOR_NEWSTEP="$(WriteTextColors "166")"
+__BU_COLOR_NEWSTEP="$(WriteTextColor "166")"
 
 # Reset color to terminal's default text color | Always "tput sgr0"
 __BU_COLOR_CODE_RESET="$(tput sgr0)"
