Corrected a bug that made the "__BU_PROJECT_FILE_PATH" global variable to be uncorrectly set

--- a/config/projectInit.conf
+++ b/config/projectInit.conf
@@ -11,6 +11,15 @@ echo "$0"
 __BU_PROJECT_FILE_NAME=$(basename "$0")                     # Project file's name.
 __BU_PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')        # Name of the project (project file's name without its file extension).
 
+function GetProjectFilePath()
+{
+    local v_project_file="$0"
+    local v_cut="${v_project_file##*./}"
+    local find_path="$(find "$(cd ..; pwd)" -name "$v_cut")"
+
+    echo "$find_path"
+}
+
 __BU_PROJECT_TMP_DIR_PARENT_NAME="tmp"
 __BU_PROJECT_TMP_DIR_PARENT_PATH="$__BASH_UTILS_ROOT/$__BU_PROJECT_TMP_DIR_PARENT_NAME"
 
@@ -30,7 +39,7 @@ else
 fi
 
 # 
-__BU_PROJECT_FILE_PATH="$(GetParentDirectoryPath "$0")/$__BU_PROJECT_FILE_NAME"
+__BU_PROJECT_FILE_PATH="$(GetProjectFilePath)"
 
 # Defining the project's log file's path.
 __BU_PROJECT_LOG_DIR_PARENT="$__BU_PROJECT_TMP_DIR_PATH"
