--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 # These status variables can be changed anywhere in the main script, except for the following variables :
-#   - __STAT_DEBUG      -> This variable is used as (...).
+#   - __BU_STAT_DEBUG      -> This variable is used as (...).
 
 
 # "CheckProjectLogPath()" function authorization to call the "HandleErrors()" function in case of need.
@@ -9,7 +9,7 @@
 # This variable only accepts "true" or "false" as values.
 # Default value : false
 # shellcheck disable=SC2034
-__STAT_CPLS="false"
+__BU_STAT_CPLS="false"
 
 
 # Project's debug variable
@@ -17,7 +17,7 @@ __STAT_CPLS="false"
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-__STAT_DEBUG="false"
+__BU_STAT_DEBUG="false"
 
 
 # Project's error handling
@@ -25,7 +25,7 @@ __STAT_DEBUG="false"
 # This variable accepts "fatal" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-__STAT_ERROR=""
+__BU_STAT_ERROR=""
 
 
 # Project's exit code
@@ -33,7 +33,7 @@ __STAT_ERROR=""
 # This variable only accepts an integer.
 # Default value : "1"
 # shellcheck disable=SC2034
-__STAT_EXIT_CODE="1"
+__BU_STAT_EXIT_CODE="1"
 
 
 # Project's main log file informations
@@ -41,7 +41,7 @@ __STAT_EXIT_CODE="1"
 # This variable only accepts "true" or "false" as values.
 # Default value : "true"
 # shellcheck disable=SC2034
-__STAT_LOG="true"
+__BU_STAT_LOG="true"
 
 
 # Project's main log file redirections status
@@ -49,7 +49,7 @@ __STAT_LOG="true"
 # This variables accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-__STAT_LOG_REDIRECT=""
+__BU_STAT_LOG_REDIRECT=""
 
 
 # Project's authorization to operate at the root directory or one of its sub-folders
@@ -57,7 +57,7 @@ __STAT_LOG_REDIRECT=""
 # This variable accepts "authorized", "forbidden" or "restricted" as values.
 # Default value : "forbidden" (by security).
 # shellcheck disable=SC2034
-__STAT_OPERATE_ROOT="forbidden"
+__BU_STAT_OPERATE_ROOT="forbidden"
 
 
 # Project's messages display time
@@ -65,7 +65,15 @@ __STAT_OPERATE_ROOT="forbidden"
 #This variable accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
-__STAT_TIME_TXT=".5"
+__BU_STAT_TIME_TXT=".5"
+
+
+# Project's translation checker.
+
+# This variable accepts "true" or "false" as value.
+# Default value : "false" (since the whole project's texts are not yet translated)
+# shellcheck disable=SC2034
+__BU_STAT_TRANSLATED="false"
 
 
 # Project's handling text formatting
@@ -73,7 +81,7 @@ __STAT_TIME_TXT=".5"
 # This variable accepts "true" or "false" as value.
 # Default value : "true"
 # shellcheck disable=SC2034
-__STAT_TXT_FMT="true"
+__BU_STAT_TXT_FMT="true"
 
 
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
@@ -81,4 +89,4 @@ __STAT_TXT_FMT="true"
 # This variable will be completed with the "CheckSupportedOSType" function.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-__STAT_USER_OS=""
+__BU_STAT_USER_OS=""
