Added the '' status variable

--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -20,6 +20,14 @@ __BU_STAT_CPLS="false"
 __BU_STAT_DEBUG="false"
 
 
+# Project's echo status handling
+
+# This variable accepts "true" or "false" as value.
+# Default value : "false"
+# shellcheck disable=SC2034
+__BU_STAT_ECHO="false"
+
+
 # Project's error handling
 
 # This variable accepts "fatal" or nothing as value.
