Added return codes

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -11,17 +11,19 @@
 ## COLOR CODES
 
 # Writing the color code into a file, to be processed by any function which needs to know what is the current text color.
-function WriteTextColor()
+function CheckTextColor()
 {
 	#***** Parameters *****
 	# $1 --> Color code
 
 	#***** Code *****
-	if CheckFmt; then
+	if CheckTextFormat; then
         if command -v tput &> /dev/null; then
-            tput setaf "$1" && __BU_PROJECT_COLOR_CODE="$1"
+            tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
+
+			__BU_PROJECT_COLOR_CODE="$1"; return 0
         else
-            echo -ne "\e[38;5;$1m"
+            echo -ne "\e[38;5;$1m"; return 0
         fi
     else
         return 1
@@ -52,43 +54,43 @@ __BU_COLOR_CODE_YELLOW='226'
 
 # -----------------------------------------------
 
-## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "WriteTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
+## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
 
 # Error text display color				| Default color : "196"	(red)
-__BU_COLOR_CODE_ERROR="$(WriteTextColor "196")"
+__BU_COLOR_CODE_ERROR="$(CheckTextColor "196")"
 
 # Highlighted text display color		| Default color : "6"	(cyan)
-__BU_COLOR_CODE_HIGHLIGHT="$(WriteTextColor "6")"
+__BU_COLOR_CODE_HIGHLIGHT="$(CheckTextColor "6")"
 
 # Newstep text display color            | Default color : "166" (orange)
-__BU_COLOR_NEWSTEP="$(WriteTextColor "166")"
+__BU_COLOR_NEWSTEP="$(CheckTextColor "166")"
 
 # Reset color to terminal's default text color | Always "tput sgr0"
 __BU_COLOR_CODE_RESET="$(tput sgr0)"
 
 # Success text display color			| Default color : "82"	(green)
-__BU_COLOR_CODE_SUCCESS="$(WriteTextColor "82")"
+__BU_COLOR_CODE_SUCCESS="$(CheckTextColor "82")"
 
 # Warning text display color			| Default color : "226"	(yellow)
-__BU_COLOR_CODE_WARNING="$(WriteTextColor "226")"
+__BU_COLOR_CODE_WARNING="$(CheckTextColor "226")"
 
 # -----------------------------------------------
 
-## ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "WriteTextColor" FUNCTIONS
+## ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
-__BU_COLOR_BLACK="$(WriteTextColor "$__BU_COLOR_CODE_BLACK")"       # Black
-__BU_COLOR_BLUE="$(WriteTextColor "$__BU_COLOR_CODE_BLUE")"       	# Deep blue
-__BU_COLOR_CYAN="$(WriteTextColor "$__BU_COLOR_CODE_CYAN")"       	# Cyan blue
-__BU_COLOR_GRAY="$(WriteTextColor "$__BU_COLOR_CODE_GRAY")"         # Gray
-__BU_COLOR_GREEN="$(WriteTextColor "$__BU_COLOR_CODE_GREEN")"     	# Light green
-__BU_COLOR_ORANGE="$(WriteTextColor "$__BU_COLOR_CODE_ORANGE")"   	# Orange
-__BU_COLOR_PINK="$(WriteTextColor "$__BU_COLOR_CODE_PINK")"         # Pink
-__BU_COLOR_PURPLE="$(WriteTextColor "$__BU_COLOR_CODE_PURPLE")"		# Purple
-__BU_COLOR_RED="$(WriteTextColor "$__BU_COLOR_CODE_RED")"	      	# Light red
-__BU_COLOR_TURQUOISE=$(WriteTextColor "$__BU_COLOR_CODE_TURQUOISE") # Turquoise
-__BU_COLOR_WHITE="$(WriteTextColor "$__BU_COLOR_CODE_WHITE")"       # White
-__BU_COLOR_YELLOW="$(WriteTextColor "$__BU_COLOR_CODE_YELLOW")"		# Light yellow
+__BU_COLOR_BLACK="$(CheckTextColor		"$__BU_COLOR_CODE_BLACK")"      # Black
+__BU_COLOR_BLUE="$(CheckTextColor 		"$__BU_COLOR_CODE_BLUE")"       # Deep blue
+__BU_COLOR_CYAN="$(CheckTextColor 		"$__BU_COLOR_CODE_CYAN")"       # Cyan blue
+__BU_COLOR_GRAY="$(CheckTextColor 		"$__BU_COLOR_CODE_GRAY")"       # Gray
+__BU_COLOR_GREEN="$(CheckTextColor 		"$__BU_COLOR_CODE_GREEN")"     	# Light green
+__BU_COLOR_ORANGE="$(CheckTextColor 	"$__BU_COLOR_CODE_ORANGE")"   	# Orange
+__BU_COLOR_PINK="$(CheckTextColor 		"$__BU_COLOR_CODE_PINK")"       # Pink
+__BU_COLOR_PURPLE="$(CheckTextColor 	"$__BU_COLOR_CODE_PURPLE")"		# Purple
+__BU_COLOR_RED="$(CheckTextColor 		"$__BU_COLOR_CODE_RED")"	 	# Light red
+__BU_COLOR_TURQUOISE="$(CheckTextColor 	"$__BU_COLOR_CODE_TURQUOISE")"	# Turquoise
+__BU_COLOR_WHITE="$(CheckTextColor 		"$__BU_COLOR_CODE_WHITE")"      # White
+__BU_COLOR_YELLOW="$(CheckTextColor 	"$__BU_COLOR_CODE_YELLOW")"		# Light yellow
 
 __BU_COLOR_ERROR="$__BU_COLOR_CODE_ERROR"							# Error text display color
 __BU_COLOR_HIGHLIGHT="$__BU_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color
