--- a/config/text.conf
+++ b/config/text.conf
@@ -37,34 +37,34 @@ __BU_TXT_STORE_ERROR_MESSAGES_ARRAY=()
 ## TEXT FORMATTING
 
 # Blink
-__BU_TXT_FMT_BLINK="$(CheckFmt 'blink' '5')"
-__BU_TXT_FMT_BLINK_RESET="$(CheckFmt 'sgr0' '25')"
+__BU_TXT_FMT_BLINK="$(CheckTextFormat 'blink' '5')"
+__BU_TXT_FMT_BLINK_RESET="$(CheckTextFormat 'sgr0' '25')"
 
 # Bold
-__BU_TXT_FMT_BOLD="$(CheckFmt 'bold' '1')"
-__BU_TXT_FMT_BOLD_RESET="$(CheckFmt 'rmso' '21')"
+__BU_TXT_FMT_BOLD="$(CheckTextFormat 'bold' '1')"
+__BU_TXT_FMT_BOLD_RESET="$(CheckTextFormat 'rmso' '21')"
 
 # Dim
-__BU_TXT_FMT_DIM="$(CheckFmt 'dim' '2')"
-__BU_TXT_FMT_DIM_RESET="$(CheckFmt '' '22')"
+__BU_TXT_FMT_DIM="$(CheckTextFormat 'dim' '2')"
+__BU_TXT_FMT_DIM_RESET="$(CheckTextFormat '' '22')"
 
 # Hidden (useful for password typing).
-__BU_TXT_FMT_HIDDEN="$(CheckFmt '' '8')"
-__BU_TXT_FMT_HIDDEN_RESET="$(CheckFmt '' '28')"
+__BU_TXT_FMT_HIDDEN="$(CheckTextFormat '' '8')"
+__BU_TXT_FMT_HIDDEN_RESET="$(CheckTextFormat '' '28')"
 
 # Italic
-__BU_TXT_FMT_ITALIC="$(CheckFmt 'sitm' '3')"
-__BU_TXT_FMT_ITALIC_RESET=$(CheckFmt 'ritm' '23')
+__BU_TXT_FMT_ITALIC="$(CheckTextFormat 'sitm' '3')"
+__BU_TXT_FMT_ITALIC_RESET="$(CheckTextFormat 'ritm' '23')"
 
 # Reset
-__BU_TXT_FMT_RESET="$(CheckFmt 'sgr0' '0')"
+__BU_TXT_FMT_RESET="$(CheckTextFormat 'sgr0' '0')"
 
 # Strikethrough
-__BU_TXT_FMT_STRIKETHROUGH="$(CheckFmt '' '9')"
-__BU_TXT_FMT_STRIKETHROUGH_RESET="$(CheckFmt '' '29')"
+__BU_TXT_FMT_STRIKETHROUGH="$(CheckTextFormat '' '9')"
+__BU_TXT_FMT_STRIKETHROUGH_RESET="$(CheckTextFormat '' '29')"
 
 # Underline
-__BU_TXT_FMT_UNDERLINE="$(CheckFmt 'smul' '4')"
-__BU_TXT_FMT_UNDERLINE_RESET="$(CheckFmt 'rmul' '24')"
+__BU_TXT_FMT_UNDERLINE="$(CheckTextFormat 'smul' '4')"
+__BU_TXT_FMT_UNDERLINE_RESET="$(CheckTextFormat 'rmul' '24')"
 
 # -----------------------------------------------
