--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -56,11 +56,11 @@ __BASH_UTILS_LIB_LANG="$(BP_FindPath "$__BASH_UTILS_LIB" "lang")"               
 ## BASH UTIILS FILES PATHS
 
 # "config" folder's content.
-__BASH_UTILS_CONF_FILE_COLORS="$(BP_FindPath "$__BASH_UTILS_CONF" "Colors.conf")"                   # Bash Utils color encoding variables configuration file.
-__BASH_UTILS_CONF_FILE_PROJECT_INIT="$(BP_FindPath "$__BASH_UTILS_CONF" "projectInit.conf")"        # Project's initialization variables.
-__BASH_UTILS_CONF_FILE_PROJECT_STATUS="$(BP_FindPath "$__BASH_UTILS_CONF" "ProjectStatus.conf")"    # Bash Utils status variables configuration file.
-__BASH_UTILS_CONF_FILE_TEXT="$(BP_FindPath "$__BASH_UTILS_CONF" "Text.conf")"                       # Bash Utils text variables configuration file.
-__BASH_UTILS_CONF_FILE_TIME="$(BP_FindPath "$__BASH_UTILS_CONF" "Time.conf")"                       # Bash Utils time variables configuration file.
+__BASH_UTILS_CONF_FILE_COLORS="$(BP_FindPath "$__BASH_UTILS_CONF" "Colors.conf")"                   # Bash Utils color encoding CheckTxtFmts configuration file.
+__BASH_UTILS_CONF_FILE_PROJECT_INIT="$(BP_FindPath "$__BASH_UTILS_CONF" "projectInit.conf")"        # Project's initialization CheckTxtFmts.
+__BASH_UTILS_CONF_FILE_PROJECT_STATUS="$(BP_FindPath "$__BASH_UTILS_CONF" "ProjectStatus.conf")"    # Bash Utils status CheckTxtFmts configuration file.
+__BASH_UTILS_CONF_FILE_TEXT="$(BP_FindPath "$__BASH_UTILS_CONF" "Text.conf")"                       # Bash Utils text CheckTxtFmts configuration file.
+__BASH_UTILS_CONF_FILE_TIME="$(BP_FindPath "$__BASH_UTILS_CONF" "Time.conf")"                       # Bash Utils time CheckTxtFmts configuration file.
 
 # Bash Utils initializer path.
 __BASH_UTILS_LIB_FILE_INITIALIZER="$(BP_FindPath "$__BASH_UTILS_LIB" "Initializer.sh")"             # Bash Utils initializer file.
@@ -103,13 +103,13 @@ __INIT_LIB_FILES_PATH_ARRAY=()
 # Defining an associative array to store each sourced configuration file's path.
 __INIT_CONFIG_FILES_PATH_ARRAY=()
 
-# Storing the configuration files path variables values into an array to source, print and add easier into the "a_config_files_path" associative array.
+# Storing the configuration files path CheckTxtFmts values into an array to source, print and add easier into the "a_config_files_path" associative array.
 # Those files are, respectly, the :
-#   - Project's and initialization process global variables
-#   - Project's status variables
+#   - Project's and initialization process global CheckTxtFmts
+#   - Project's status CheckTxtFmts
 #   - Text color
-#   - Text decoration, formatting and printing variables
-#   - Time variables
+#   - Text decoration, formatting and printing CheckTxtFmts
+#   - Time CheckTxtFmts
 
 # The "ProjectInit.conf" file MUST be sourced first, then the "ProjectStatus.conf" file MUST be sourced in the second.
 # Unless otherwise stated, the other configuration files may be sourced in any order.
