--- a/config/colors.conf
+++ b/config/colors.conf
@@ -21,7 +21,7 @@ function CheckTextColor()
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
 
-			__BU_PROJECT_COLOR_CODE="$1"; return 0
+			echo "$1" > "$__BU_PROJECT_COLOR_CODE_FILE_PATH"; return 0
         else
             echo -ne "\e[38;5;$1m"; return 0
         fi
