--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -1,20 +1,20 @@
 #!/usr/bin/env bash
 
-# These status CheckTxtFmts can be changed anywhere in the main script, except for the following CheckTxtFmts :
-#   - __BU_STAT_DEBUG      -> This CheckTxtFmt is used as (...).
+# These status variable can be changed anywhere in the main script, except for the following variables :
+#   - __BU_STAT_DEBUG      -> This variable is used as (...).
 
 
 # "CheckProjectLogPath()" function authorization to call the "HandleErrors()" function in case of need.
 
-# This CheckTxtFmt only accepts "true" or "false" as values.
+# This variable only accepts "true" or "false" as values.
 # Default value : false
 # shellcheck disable=SC2034
 __BU_STAT_CPLS="false"
 
 
-# Project's debug CheckTxtFmt
+# Project's debug variable
 
-# This CheckTxtFmt only accepts "true" or "false" as values.
+# This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
 __BU_STAT_DEBUG="false"
@@ -22,7 +22,7 @@ __BU_STAT_DEBUG="false"
 
 # Project's echo status handling
 
-# This CheckTxtFmt accepts "true" or "false" as value.
+# This variable accepts "true" or "false" as value.
 # Default value : "false"
 # shellcheck disable=SC2034
 __BU_STAT_ECHO="false"
@@ -30,7 +30,7 @@ __BU_STAT_ECHO="false"
 
 # Project's error handling
 
-# This CheckTxtFmt accepts "fatal" or nothing as value.
+# This variable accepts "fatal" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __BU_STAT_ERROR=""
@@ -38,7 +38,7 @@ __BU_STAT_ERROR=""
 
 # Project's main log file informations
 
-# This CheckTxtFmt only accepts "true" or "false" as values.
+# This variable only accepts "true" or "false" as values.
 # Default value : "true"
 # shellcheck disable=SC2034
 __BU_STAT_LOG="true"
@@ -46,7 +46,7 @@ __BU_STAT_LOG="true"
 
 # Project's main log file redirections status
 
-# This CheckTxtFmts accepts "log", "tee" or nothing as value.
+# This variable accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __BU_STAT_LOG_REDIRECT=""
@@ -54,15 +54,23 @@ __BU_STAT_LOG_REDIRECT=""
 
 # Project's authorization to operate at the root directory or one of its sub-folders
 
-# This CheckTxtFmt accepts "authorized", "forbidden" or "restricted" as values.
+# This variable accepts "authorized", "forbidden" or "restricted" as values.
 # Default value : "forbidden" (by security).
 # shellcheck disable=SC2034
 __BU_STAT_OPERATE_ROOT="forbidden"
 
 
+# Project initialization's messages displaying.
+
+# This variable accepts "true" or "false" as values.
+# Default value : "false"
+# shellcheck disable=SC2034
+__BU_STAT_PRINT_INIT_LOG="true"
+
+
 # Project's messages display time
 
-#This CheckTxtFmt accepts any integer of floating number.
+# This variable accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
 __BU_STAT_TIME_TXT=".5"
@@ -70,7 +78,7 @@ __BU_STAT_TIME_TXT=".5"
 
 # Project's translation checker.
 
-# This CheckTxtFmt accepts "true" or "false" as value.
+# This variable accepts "true" or "false" as value.
 # Default value : "false" (since the whole project's texts are not yet translated)
 # shellcheck disable=SC2034
 __BU_STAT_TRANSLATED="false"
@@ -78,7 +86,7 @@ __BU_STAT_TRANSLATED="false"
 
 # Project's handling text formatting
 
-# This CheckTxtFmt accepts "true" or "false" as value.
+# This variable accepts "true" or "false" as value.
 # Default value : "true"
 # shellcheck disable=SC2034
 __BU_STAT_TXT_FMT="true"
@@ -86,7 +94,7 @@ __BU_STAT_TXT_FMT="true"
 
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
 
-# This CheckTxtFmt will be completed with the "CheckSupportedOSType" function.
+# This variable will be completed with the "CheckSupportedOSType" function.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __BU_STAT_USER_OS=""
