Renamed the  status variable and created the  status variable

--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -4,14 +4,6 @@
 #   - __BU_STAT_DEBUG      -> This variable is used as (...).
 
 
-# "CheckProjectLogPath()" function authorization to call the "HandleErrors()" function in case of need.
-
-# This variable only accepts "true" or "false" as values.
-# Default value : false
-# shellcheck disable=SC2034
-__BU_STAT_CPLS="false"
-
-
 # Project's debug variable
 
 # This variable only accepts "true" or "false" as values.
@@ -20,9 +12,17 @@ __BU_STAT_CPLS="false"
 __BU_STAT_DEBUG="false"
 
 
-# Project's echo status handling
+# "CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
 
-# This variable accepts "true" or "false" as value.
+# This variable only accepts "authorize", "forbid" or "restrict" as values.
+# Default value : "forbid"
+# shellcheck disable=SC2034
+__BU_STAT_DECHO="forbid"
+
+
+# "CheckProjectLogPath()" function's authorization to call an "Echo<...>()" function in case of need.
+
+# This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
 __BU_STAT_ECHO="false"
