--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -28,7 +28,7 @@ function BP_FindPath
 # For a better environment integration, it is highly advised to store the path in a file
 # in the user's home directory, and to call the "cat" command to display its value.
 
-__BASH_UTILS_ROOT="$(cat $HOME/Bash-utils-root-val.path)"
+__BASH_UTILS_ROOT="$(cat "$HOME/Bash-utils-root-val.path")"
 
 # Bash Utils sub-folders paths.
 __BASH_UTILS_BIN="$(BP_FindPath "$__BASH_UTILS_ROOT" "bin")"			# Bash Utils binary files folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
@@ -38,18 +38,19 @@ __BASH_UTILS_LIB="$(BP_FindPath "$__BASH_UTILS_ROOT" "lib")"			# Bash Utils libr
 __BASH_UTILS_RES="$(BP_FindPath "$__BASH_UTILS_ROOT" "res")"            # Bash Utils resources directory                        |   Default parent folder --> "$__BASH_UTILS_ROOT/"
 
 # Bash Utils dev-tools paths.
-__BASH_UTILS_DEVTOOLS_ROOT="$(BP_FindPath "$__BASH_UTILS_RES" "dev-tools")"                        # Bash Utils development tools root directory			|	Default parent folder --> "$__BASH_UTILS_RES/"
+__BASH_UTILS_DEVTOOLS_ROOT="$(BP_FindPath "$__BASH_UTILS_RES" "dev-tools")"                        # Bash Utils development tools root directory		|	Default parent folder --> "$__BASH_UTILS_RES/"
 __BASH_UTILS_DEVTOOLS_BIN="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
 __BASH_UTILS_DEVTOOLS_DSK="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
 __BASH_UTILS_DEVTOOLS_IMG="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
-__BASH_UTILS_DEVTOOLS_SRC="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-src")"                 # Bash Utils development tools source files				|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
+__BASH_UTILS_DEVTOOLS_SRC="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-src")"                 # Bash Utils development tools source files			|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
 __BASH_UTILS_DEVTOOLS_TRANSL="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-translations")"     # Bash Utils development tools translation files folder	|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
 
 # "lib" folder's content.
-__BASH_UTILS_LIB_FUNCTS="$(BP_FindPath "$__BASH_UTILS_LIB" "functions")"                # Bash Utils functions root directory                       |   Default parent folder --> "$__BASH_UTILS_LIB/"
-__BASH_UTILS_LIB_FUNCTS_MAIN="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "main")"         # Bash Utils main functions files directory                 |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
-__BASH_UTILS_LIB_FUNCTS_OS="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "os-specific")"    # Bash Utils operating system specific functions directory  |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
-__BASH_UTILS_LIB_LANG="$(BP_FindPath "$__BASH_UTILS_LIB" "lang")"                       # Bash Utils translations files directory                   |   Default parent folder --> "$__BASH_UTILS_LIB/"
+__BASH_UTILS_LIB_FUNCTS="$(BP_FindPath "$__BASH_UTILS_LIB" "functions")"                		# Bash Utils functions root directory                       	|   Default parent folder --> "$__BASH_UTILS_LIB/"
+__BASH_UTILS_LIB_FUNCTS_MAIN="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "main")"         		# Bash Utils main functions files directory               	|   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
+__BASH_UTILS_LIB_FUNCTS_MAIN_FILESYSTEM="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS_MAIN" "filesystem")"	# Bash Utils main functions filesystem operations sub-folder	|   Default parent folder --> "__BASH_UTILS_LIB_FUNCTS_MAIN/"
+__BASH_UTILS_LIB_FUNCTS_OS="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "os-specific")"    		# Bash Utils operating system specific functions directory  	|   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
+__BASH_UTILS_LIB_LANG="$(BP_FindPath "$__BASH_UTILS_LIB" "lang")"                       		# Bash Utils translations files directory                   	|   Default parent folder --> "$__BASH_UTILS_LIB/"
 
 # -----------------------------------------------
 
@@ -70,7 +71,7 @@ __BASH_UTILS_TRANSLATION_FILE="$__BASH_UTILS_LIB_LANG/lang.csv"                 
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
-__BASH_UTILS_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_LIB_FUNCTS_MAIN/"*.lib )
+__BASH_UTILS_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_LIB_FUNCTS_MAIN/"*.lib "$__BASH_UTILS_LIB_FUNCTS_MAIN_FILESYSTEM/"*.lib )
 
 # -----------------------------------------------
 
