--- a/res/dev-tools/dev-desktop/wc.desktop
+++ b/res/dev-tools/dev-desktop/wc.desktop
@@ -3,7 +3,7 @@
 Name="wc.sh"
 Comment="Getting size, number of characters, words and lines in the whole Bash-utils library"
 Exec=bash -c "$BASH_UTILS_DEVTOOLS_BIN/wc.sh"
-Icon="$__BASH_UTILS_ICONS/wc.png"
+Icon="$__BASH_UTILS_MOD_MAIN_ICONS/wc.png"
 Terminal=false
 Type=Application
 Categories=Development;
