removed the "lib/functions/main/filesystem" folder

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -53,7 +53,7 @@ __BASH_UTILS_MOD_MAIN_TRANSLATION_FILE="$__BASH_UTILS_MOD_MAIN_LIB_LANG/lang.csv
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
-__BASH_UTILS_MOD_MAIN_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS_MAIN/"*.lib "$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS_MAIN_FILESYSTEM/"*.lib )
+__BASH_UTILS_MOD_MAIN_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS_MAIN/"*.lib )
 
 # -----------------------------------------------
 
