Modified the variables names

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -21,7 +21,7 @@ function CheckTextColor()
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
 
-			echo "$1" > "$__BU_MOD_MAIN_PROJECT_COLOR_CODE_FILE_PATH"; return 0
+			echo "$1" > "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH"; return 0
         else
             echo -ne "\e[38;5;$1m"; return 0
         fi
@@ -39,63 +39,63 @@ function CheckTextColor()
 #### COLOR ENCODING
 
 ## COLOR CODES FOR ENCODING
-__BU_MOD_MAIN_COLOR_CODE_BLACK='0'
-__BU_MOD_MAIN_COLOR_CODE_BLUE='4'
-__BU_MOD_MAIN_COLOR_CODE_CYAN='6'
-__BU_MOD_MAIN_COLOR_CODE_GRAY="244"
-__BU_MOD_MAIN_COLOR_CODE_GREEN='82'
-__BU_MOD_MAIN_COLOR_CODE_ORANGE='166'
-__BU_MOD_MAIN_COLOR_CODE_PINK='200'
-__BU_MOD_MAIN_COLOR_CODE_PURPLE='165'
-__BU_MOD_MAIN_COLOR_CODE_RED='196'
-__BU_MOD_MAIN_COLOR_CODE_TURQUOISE='51'
-__BU_MOD_MAIN_COLOR_CODE_WHITE='15'
-__BU_MOD_MAIN_COLOR_CODE_YELLOW='226'
+__BU_MAIN_COLOR_CODE_BLACK='0'
+__BU_MAIN_COLOR_CODE_BLUE='4'
+__BU_MAIN_COLOR_CODE_CYAN='6'
+__BU_MAIN_COLOR_CODE_GRAY="244"
+__BU_MAIN_COLOR_CODE_GREEN='82'
+__BU_MAIN_COLOR_CODE_ORANGE='166'
+__BU_MAIN_COLOR_CODE_PINK='200'
+__BU_MAIN_COLOR_CODE_PURPLE='165'
+__BU_MAIN_COLOR_CODE_RED='196'
+__BU_MAIN_COLOR_CODE_TURQUOISE='51'
+__BU_MAIN_COLOR_CODE_WHITE='15'
+__BU_MAIN_COLOR_CODE_YELLOW='226'
 
 # -----------------------------------------------
 
 ## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
 
 # Error text display color				| Default color : "196"	(red)
-__BU_MOD_MAIN_COLOR_CODE_ERROR="$(CheckTextColor "196")"
+__BU_MAIN_COLOR_CODE_ERROR="$(CheckTextColor "196")"
 
 # Highlighted text display color		| Default color : "6"	(cyan)
-__BU_MOD_MAIN_COLOR_CODE_HIGHLIGHT="$(CheckTextColor "6")"
+__BU_MAIN_COLOR_CODE_HIGHLIGHT="$(CheckTextColor "6")"
 
 # Newstep text display color            | Default color : "166" (orange)
-__BU_MOD_MAIN_COLOR_NEWSTEP="$(CheckTextColor "166")"
+__BU_MAIN_COLOR_NEWSTEP="$(CheckTextColor "166")"
 
 # Reset color to terminal's default text color | Always "tput sgr0"
-__BU_MOD_MAIN_COLOR_CODE_RESET="$(tput sgr0)"
+__BU_MAIN_COLOR_CODE_RESET="$(tput sgr0)"
 
 # Success text display color			| Default color : "82"	(green)
-__BU_MOD_MAIN_COLOR_CODE_SUCCESS="$(CheckTextColor "82")"
+__BU_MAIN_COLOR_CODE_SUCCESS="$(CheckTextColor "82")"
 
 # Warning text display color			| Default color : "226"	(yellow)
-__BU_MOD_MAIN_COLOR_CODE_WARNING="$(CheckTextColor "226")"
+__BU_MAIN_COLOR_CODE_WARNING="$(CheckTextColor "226")"
 
 # -----------------------------------------------
 
 ## ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "CheckTextColor" FUNCTIONS
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
-__BU_MOD_MAIN_COLOR_BLACK="$(CheckTextColor		"$__BU_MOD_MAIN_COLOR_CODE_BLACK")"      # Black
-__BU_MOD_MAIN_COLOR_BLUE="$(CheckTextColor 		"$__BU_MOD_MAIN_COLOR_CODE_BLUE")"       # Deep blue
-__BU_MOD_MAIN_COLOR_CYAN="$(CheckTextColor 		"$__BU_MOD_MAIN_COLOR_CODE_CYAN")"       # Cyan blue
-__BU_MOD_MAIN_COLOR_GRAY="$(CheckTextColor 		"$__BU_MOD_MAIN_COLOR_CODE_GRAY")"       # Gray
-__BU_MOD_MAIN_COLOR_GREEN="$(CheckTextColor 		"$__BU_MOD_MAIN_COLOR_CODE_GREEN")"     	# Light green
-__BU_MOD_MAIN_COLOR_ORANGE="$(CheckTextColor 	"$__BU_MOD_MAIN_COLOR_CODE_ORANGE")"   	# Orange
-__BU_MOD_MAIN_COLOR_PINK="$(CheckTextColor 		"$__BU_MOD_MAIN_COLOR_CODE_PINK")"       # Pink
-__BU_MOD_MAIN_COLOR_PURPLE="$(CheckTextColor 	"$__BU_MOD_MAIN_COLOR_CODE_PURPLE")"		# Purple
-__BU_MOD_MAIN_COLOR_RED="$(CheckTextColor 		"$__BU_MOD_MAIN_COLOR_CODE_RED")"	 	# Light red
-__BU_MOD_MAIN_COLOR_TURQUOISE="$(CheckTextColor 	"$__BU_MOD_MAIN_COLOR_CODE_TURQUOISE")"	# Turquoise
-__BU_MOD_MAIN_COLOR_WHITE="$(CheckTextColor 		"$__BU_MOD_MAIN_COLOR_CODE_WHITE")"      # White
-__BU_MOD_MAIN_COLOR_YELLOW="$(CheckTextColor 	"$__BU_MOD_MAIN_COLOR_CODE_YELLOW")"		# Light yellow
+__BU_MAIN_COLOR_BLACK="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_BLACK")"      # Black
+__BU_MAIN_COLOR_BLUE="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_BLUE")"       # Deep blue
+__BU_MAIN_COLOR_CYAN="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_CYAN")"       # Cyan blue
+__BU_MAIN_COLOR_GRAY="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_GRAY")"       # Gray
+__BU_MAIN_COLOR_GREEN="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_GREEN")"     	# Light green
+__BU_MAIN_COLOR_ORANGE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_ORANGE")"   	# Orange
+__BU_MAIN_COLOR_PINK="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_PINK")"       # Pink
+__BU_MAIN_COLOR_PURPLE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_PURPLE")"		# Purple
+__BU_MAIN_COLOR_RED="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_RED")"	 	# Light red
+__BU_MAIN_COLOR_TURQUOISE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_TURQUOISE")"	# Turquoise
+__BU_MAIN_COLOR_WHITE="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_WHITE")"      # White
+__BU_MAIN_COLOR_YELLOW="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_YELLOW")"		# Light yellow
 
-__BU_MOD_MAIN_COLOR_ERROR="$__BU_MOD_MAIN_COLOR_CODE_ERROR"							# Error text display color
-__BU_MOD_MAIN_COLOR_HIGHLIGHT="$__BU_MOD_MAIN_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color
-__BU_MOD_MAIN_COLOR_RESET="$__BU_MOD_MAIN_COLOR_CODE_RESET"							# Reset color to terminal's default text color
-__BU_MOD_MAIN_COLOR_SUCCESS="$__BU_MOD_MAIN_COLOR_CODE_SUCCESS"						# Success text display color
-__BU_MOD_MAIN_COLOR_WARNING="$__BU_MOD_MAIN_COLOR_CODE_WARNING"						# Warning text display color
+__BU_MAIN_COLOR_ERROR="$__BU_MAIN_COLOR_CODE_ERROR"							# Error text display color
+__BU_MAIN_COLOR_HIGHLIGHT="$__BU_MAIN_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color
+__BU_MAIN_COLOR_RESET="$__BU_MAIN_COLOR_CODE_RESET"							# Reset color to terminal's default text color
+__BU_MAIN_COLOR_SUCCESS="$__BU_MAIN_COLOR_CODE_SUCCESS"						# Success text display color
+__BU_MAIN_COLOR_WARNING="$__BU_MAIN_COLOR_CODE_WARNING"						# Warning text display color
 
 # -----------------------------------------------
