--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -11,49 +11,49 @@
 # For a better environment integration, it is highly advised to store the path in a file
 # in the user's home directory, and to call the "cat" command to display its value.
 
-__BASH_UTILS_MOD_MAIN_ROOT="$(cat "$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path")"
+__BASH_UTILS_MAIN_ROOT="$(cat "$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path")"
 
 # Bash Utils sub-folders paths.
-__BASH_UTILS_MOD_MAIN_BIN="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_ROOT" "bin")"			# Bash Utils binary files folder            |	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_ROOT/"
-__BASH_UTILS_MOD_MAIN_CONF="$(ModuleInitializer_FindPath "$__BU_MODULE_UTILS_CONFIG_MODULES" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"	# Bash Utils configuration files folder		|	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_ROOT/"
-__BASH_UTILS_MOD_MAIN_DOCS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_ROOT" "docs")"			# Bash Utils documentation folder			|	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_ROOT/"
-__BASH_UTILS_MOD_MAIN_LIB="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_ROOT" "lib")"           # Bash Utils library root directory	        |	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_ROOT/"
-__BASH_UTILS_MOD_MAIN_RES="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_ROOT" "res")"           # Bash Utils resources directory            |   Default parent folder --> "$__BASH_UTILS_MOD_MAIN_ROOT/"
+__BASH_UTILS_MAIN_BIN="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT" "bin")"			# Bash Utils binary files folder            |	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT/"
+__BASH_UTILS_MAIN_CONF="$(ModuleInitializer_FindPath "$__BU_MODULE_UTILS_CONFIG_MODULES" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"	# Bash Utils configuration files folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT/"
+__BASH_UTILS_MAIN_DOCS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT" "docs")"			# Bash Utils documentation folder			|	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT/"
+__BASH_UTILS_MAIN_LIB="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT" "lib")"           # Bash Utils library root directory	        |	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT/"
+__BASH_UTILS_MAIN_RES="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT" "res")"           # Bash Utils resources directory            |   Default parent folder --> "$__BASH_UTILS_MAIN_ROOT/"
 
 # Bash Utils dev-tools paths.
-__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_RES" "dev-tools")"                        # Bash Utils development tools root directory           |	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_RES/"
-__BASH_UTILS_MOD_MAIN_DEVTOOLS_BIN="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT/"
-__BASH_UTILS_MOD_MAIN_DEVTOOLS_DSK="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT/"
-__BASH_UTILS_MOD_MAIN_DEVTOOLS_IMG="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT/"
-__BASH_UTILS_MOD_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT" "dev-src")"                 # Bash Utils development tools source files             |	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT/"
-__BASH_UTILS_MOD_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT" "dev-translations")"     # Bash Utils development tools translation files folder |	Default parent folder --> "$__BASH_UTILS_MOD_MAIN_DEVTOOLS_ROOT/"
+__BASH_UTILS_MAIN_DEVTOOLS_ROOT="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_RES" "dev-tools")"                        # Bash Utils development tools root directory           |	Default parent folder --> "$__BASH_UTILS_MAIN_RES/"
+__BASH_UTILS_MAIN_DEVTOOLS_BIN="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT/"
+__BASH_UTILS_MAIN_DEVTOOLS_DSK="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT/"
+__BASH_UTILS_MAIN_DEVTOOLS_IMG="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT/"
+__BASH_UTILS_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT" "dev-src")"                 # Bash Utils development tools source files             |	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT/"
+__BASH_UTILS_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT" "dev-translations")"     # Bash Utils development tools translation files folder |	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT/"
 
 # "lib" folder's content.
-__BASH_UTILS_MOD_MAIN_LIB_FUNCTS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_LIB" "functions")"                		# Bash Utils functions root directory                         |   Default parent folder --> "$__BASH_UTILS_MOD_MAIN_LIB/"
-__BASH_UTILS_MOD_MAIN_LIB_FUNCTS_MAIN="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS" "main")"         		# Bash Utils main functions files directory                   |   Default parent folder --> "$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS/"
-__BASH_UTILS_MOD_MAIN_LIB_FUNCTS_OS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS" "os-specific")"    		# Bash Utils operating system specific functions directory    |   Default parent folder --> "$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS/"
-__BASH_UTILS_MOD_MAIN_LIB_LANG="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_LIB" "lang")"                       		# Bash Utils translations files directory                     |   Default parent folder --> "$__BASH_UTILS_MOD_MAIN_LIB/"
+__BASH_UTILS_MAIN_LIB_FUNCTS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB" "functions")"                		# Bash Utils functions root directory                         |   Default parent folder --> "$__BASH_UTILS_MAIN_LIB/"
+__BASH_UTILS_MAIN_LIB_FUNCTS_MAIN="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB_FUNCTS" "main")"         		# Bash Utils main functions files directory                   |   Default parent folder --> "$__BASH_UTILS_MAIN_LIB_FUNCTS/"
+__BASH_UTILS_MAIN_LIB_FUNCTS_OS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB_FUNCTS" "os-specific")"    		# Bash Utils operating system specific functions directory    |   Default parent folder --> "$__BASH_UTILS_MAIN_LIB_FUNCTS/"
+__BASH_UTILS_MAIN_LIB_LANG="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB" "lang")"                       		# Bash Utils translations files directory                     |   Default parent folder --> "$__BASH_UTILS_MAIN_LIB/"
 
 # -----------------------------------------------
 
 ## BASH UTIILS FILES PATHS
 
 # "config" folder's content.
-__BASH_UTILS_MOD_MAIN_CONF_FILE_COLORS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_CONF" "Colors.conf")"                   # Bash Utils color encoding CheckTxtFmts configuration file.
-__BASH_UTILS_MOD_MAIN_CONF_FILE_PROJECT_INIT="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_CONF" "projectInit.conf")"        # Project's initialization CheckTxtFmts.
-__BASH_UTILS_MOD_MAIN_CONF_FILE_PROJECT_STATUS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_CONF" "ProjectStatus.conf")"    # Bash Utils status CheckTxtFmts configuration file.
-__BASH_UTILS_MOD_MAIN_CONF_FILE_TEXT="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_CONF" "Text.conf")"                       # Bash Utils text CheckTxtFmts configuration file.
-__BASH_UTILS_MOD_MAIN_CONF_FILE_TIME="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_CONF" "Time.conf")"                       # Bash Utils time CheckTxtFmts configuration file.
+__BASH_UTILS_MAIN_CONF_FILE_COLORS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF" "Colors.conf")"                   # Bash Utils color encoding CheckTxtFmts configuration file.
+__BASH_UTILS_MAIN_CONF_FILE_PROJECT_INIT="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF" "projectInit.conf")"        # Project's initialization CheckTxtFmts.
+__BASH_UTILS_MAIN_CONF_FILE_PROJECT_STATUS="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF" "ProjectStatus.conf")"    # Bash Utils status CheckTxtFmts configuration file.
+__BASH_UTILS_MAIN_CONF_FILE_TEXT="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF" "Text.conf")"                       # Bash Utils text CheckTxtFmts configuration file.
+__BASH_UTILS_MAIN_CONF_FILE_TIME="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF" "Time.conf")"                       # Bash Utils time CheckTxtFmts configuration file.
 
 # Bash Utils initializer path.
-__BASH_UTILS_MOD_MAIN_LIB_FILE_INITIALIZER="$(ModuleInitializer_FindPath "$__BASH_UTILS_MOD_MAIN_LIB" "Initializer.sh")"             # Bash Utils initializer file.
+__BASH_UTILS_MAIN_LIB_FILE_INITIALIZER="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB" "Initializer.sh")"             # Bash Utils initializer file.
 
 # Bash Utils translations path.
-__BASH_UTILS_MOD_MAIN_TRANSLATION_FILE="$__BASH_UTILS_MOD_MAIN_LIB_LANG/lang.csv"   # Bash Utils translations file.
+__BASH_UTILS_MAIN_TRANSLATION_FILE="$__BASH_UTILS_MAIN_LIB_LANG/lang.csv"   # Bash Utils translations file.
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
-__BASH_UTILS_MOD_MAIN_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS_MAIN/"*.lib )
+__BASH_UTILS_MAIN_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_MAIN_LIB_FUNCTS_MAIN/"*.lib )
 
 # -----------------------------------------------
 
@@ -65,25 +65,25 @@ __BASH_UTILS_MOD_MAIN_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_MOD_MAIN_LIB_FUNCTS_M
 ## INITIALIZATION VARIABLES DECLARATIONS
 
 # Initialization status.
-__BASH_UTILS_MOD_MAIN_INIT_IS_INITALIZING="true"
+__BASH_UTILS_MAIN_INIT_IS_INITALIZING="true"
 
 # Array of strings, to display in the log file with the date.
-__BASH_UTILS_MOD_MAIN_INIT_STR_ARRAY_LOG_DATE=()
-__BASH_UTILS_MOD_MAIN_INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__BASH_UTILS_MOD_MAIN_INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo "$v_cutstr"; done)"
+__BASH_UTILS_MAIN_INIT_STR_ARRAY_LOG_DATE=()
+__BASH_UTILS_MAIN_INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__BASH_UTILS_MAIN_INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo "$v_cutstr"; done)"
 
 # -----------------------------------------------
 
 ## LIBRARY INITALIZATION VARIABLES DECLARATIONS
 
 # Defining an associative array to store each sourced library file's path.
-__BASH_UTILS_MOD_MAIN_INIT_LIB_FILES_PATH_ARRAY=()
+__BASH_UTILS_MAIN_INIT_LIB_FILES_PATH_ARRAY=()
 
 # -----------------------------------------------
 
 ## CONFIGURATION FILES INITALIZATION VARIABLES DECLARATIONS
 
 # Defining an associative array to store each sourced configuration file's path.
-__BASH_UTILS_MOD_MAIN_INIT_CONFIG_FILES_PATH_ARRAY=()
+__BASH_UTILS_MAIN_INIT_CONFIG_FILES_PATH_ARRAY=()
 
 # Storing the configuration files path CheckTxtFmts values into an array to source, print and add easier into the "a_config_files_path" associative array.
 # Those files are, respectly, the :
@@ -96,11 +96,11 @@ __BASH_UTILS_MOD_MAIN_INIT_CONFIG_FILES_PATH_ARRAY=()
 # The "ProjectInit.conf" file MUST be sourced first, then the "ProjectStatus.conf" file MUST be sourced in the second.
 # Unless otherwise stated, the other configuration files may be sourced in any order.
 
-__BASH_UTILS_MOD_MAIN_INIT_LIST_CONFIG_FILES_PATH_ARRAY=("$__BASH_UTILS_MOD_MAIN_CONF_FILE_PROJECT_INIT" \
-    "$__BASH_UTILS_MOD_MAIN_CONF_FILE_PROJECT_STATUS" \
-    "$__BASH_UTILS_MOD_MAIN_CONF_FILE_COLORS" \
-    "$__BASH_UTILS_MOD_MAIN_CONF_FILE_TEXT" \
-    "$__BASH_UTILS_MOD_MAIN_CONF_FILE_TIME")
+__BASH_UTILS_MAIN_INIT_LIST_CONFIG_FILES_PATH_ARRAY=("$__BASH_UTILS_MAIN_CONF_FILE_PROJECT_INIT" \
+    "$__BASH_UTILS_MAIN_CONF_FILE_PROJECT_STATUS" \
+    "$__BASH_UTILS_MAIN_CONF_FILE_COLORS" \
+    "$__BASH_UTILS_MAIN_CONF_FILE_TEXT" \
+    "$__BASH_UTILS_MAIN_CONF_FILE_TIME")
 
 # -----------------------------------------------
 
