Updating the module manager part

--- a/install/.Bash-utils/config/modules/main/Init.conf
+++ b/install/.Bash-utils/config/modules/main/Init.conf
@@ -20,7 +20,7 @@ function GetProjectFilePath()
 }
 
 __BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME="tmp"
-__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH="$__BASH_UTILS_MAIN_ROOT/$__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME"
+__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH="$__BU_MAIN_ROOT/$__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME"
 
 if [ ! -d "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH" ]; then
     mkdir -p "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH" || { echo >&2; echo "UNABLE TO CREATE THE PROJECT'S TEMPORARY FOLDER'S PARENT DIRECTORY !" >&2; echo >&2; exit 1; }
