--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -11,48 +11,48 @@
 # For a better environment integration, it is highly advised to store the path in a file
 # in the user's home directory, and to call the "cat" command to display its value.
 
-__BASH_UTILS_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path")"
+__BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path")"
 
 # Bash Utils sub-folders paths.
-__BASH_UTILS_MAIN_BIN_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT_DIR_PATH" "bin")"			# Bash Utils binary files folder            |	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT_DIR_PATH/"
-__BASH_UTILS_MAIN_CONF_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MODULE_UTILS_CONFIG_MODULES" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"	# Bash Utils configuration files folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT_DIR_PATH"
-__BASH_UTILS_MAIN_DOCS_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT_DIR_PATH" "docs")"			# Bash Utils documentation folder			|	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT_DIR_PATH/"
-__BASH_UTILS_MAIN_LIB_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT_DIR_PATH" "lib")"           # Bash Utils library root directory	        |	Default parent folder --> "$__BASH_UTILS_MAIN_ROOT_DIR_PATH/"
-__BASH_UTILS_MAIN_RES_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_ROOT_DIR_PATH" "res")"           # Bash Utils resources directory            |   Default parent folder --> "$__BASH_UTILS_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_BIN_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "bin")"			# Bash Utils binary files folder            |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_CONF_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MODULE_UTILS_CONFIG_MODULES" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"	# Bash Utils configuration files folder		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH"
+__BU_MAIN_DOCS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "docs")"			# Bash Utils documentation folder			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_LIB_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "lib")"           # Bash Utils library root directory	        |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_RES_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "res")"           # Bash Utils resources directory            |   Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 
 # Bash Utils dev-tools paths.
-__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_RES_DIR_PATH" "dev-tools")"               # Bash Utils development tools root directory           |	Default parent folder --> "$__BASH_UTILS_MAIN_RES_DIR_PATH/"
-__BASH_UTILS_MAIN_DEVTOOLS_BIN="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BASH_UTILS_MAIN_DEVTOOLS_DSK="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BASH_UTILS_MAIN_DEVTOOLS_IMG="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BASH_UTILS_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-src")"                 # Bash Utils development tools source files             |	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BASH_UTILS_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-translations")"     # Bash Utils development tools translation files folder |	Default parent folder --> "$__BASH_UTILS_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_RES_DIR_PATH" "dev-tools")"               # Bash Utils development tools root directory           |	Default parent folder --> "$__BU_MAIN_RES_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_BIN="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_DSK="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_IMG="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-src")"                 # Bash Utils development tools source files             |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-translations")"     # Bash Utils development tools translation files folder |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
 
 # "lib" folder's content.
-__BASH_UTILS_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB_DIR_PATH" "functions")"                		# Bash Utils functions root directory                         |   Default parent folder --> "$__BASH_UTILS_MAIN_LIB_DIR_PATH/"
-__BASH_UTILS_MAIN_LIB_FUNCTS_MAIN_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB_FUNCTS_DIR_PATH" "main")"         		# Bash Utils main functions files directory                   |   Default parent folder --> "$__BASH_UTILS_MAIN_LIB_FUNCTS_DIR_PATH/"
-__BASH_UTILS_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB_DIR_PATH" "lang")"                       		# Bash Utils translations files directory                     |   Default parent folder --> "$__BASH_UTILS_MAIN_LIB_DIR_PATH/"
+__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "functions")"                		# Bash Utils functions root directory                         |   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
+__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_FUNCTS_DIR_PATH" "main")"         		    # Bash Utils main functions files directory                   |   Default parent folder --> "$__BU_MAIN_LIB_FUNCTS_DIR_PATH/"
+__BU_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "lang")"                       		# Bash Utils translations files directory                     |   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
 
 # -----------------------------------------------
 
 ## BASH UTIILS FILES PATHS
 
 # "config" folder's content.
-__BASH_UTILS_MAIN_CONF_COLORS_FILE_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF_DIR_PATH" "Colors.conf")"                   # Bash Utils color encoding CheckTxtFmts configuration file.
-__BASH_UTILS_MAIN_CONF_INIT_FILE_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF_DIR_PATH" "projectInit.conf")"        # Project's initialization CheckTxtFmts.
-__BASH_UTILS_MAIN_CONF_STATUS_FILE_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF_DIR_PATH" "ProjectStatus.conf")"    # Bash Utils status CheckTxtFmts configuration file.
-__BASH_UTILS_MAIN_CONF_TEXT_FILE_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF_DIR_PATH" "Text.conf")"                       # Bash Utils text CheckTxtFmts configuration file.
-__BASH_UTILS_MAIN_CONF_TIME_FILE_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_CONF_DIR_PATH" "Time.conf")"                       # Bash Utils time CheckTxtFmts configuration file.
+__BU_MAIN_CONF_COLORS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Colors.conf")"                   # Bash Utils color encoding CheckTxtFmts configuration file.
+__BU_MAIN_CONF_INIT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "projectInit.conf")"        # Project's initialization CheckTxtFmts.
+__BU_MAIN_CONF_STATUS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "ProjectStatus.conf")"    # Bash Utils status CheckTxtFmts configuration file.
+__BU_MAIN_CONF_TEXT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Text.conf")"                       # Bash Utils text CheckTxtFmts configuration file.
+__BU_MAIN_CONF_TIME_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Time.conf")"                       # Bash Utils time CheckTxtFmts configuration file.
 
 # Bash Utils initializer path.
-__BASH_UTILS_MAIN_LIB_FILE_INITIALIZER_FILE_PATH="$(ModuleInitializer_FindPath "$__BASH_UTILS_MAIN_LIB_DIR_PATH" "Initializer.sh")"             # Bash Utils initializer file.
+__BU_MAIN_LIB_FILE_INITIALIZER_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "Initializer.sh")"             # Bash Utils initializer file.
 
 # Bash Utils translations path.
-__BASH_UTILS_MAIN_TRANSLATION_FILE_PATH="$__BASH_UTILS_MAIN_LIB_LANG_DIR_PATH/lang.csv"   # Bash Utils translations file.
+__BU_MAIN_TRANSLATION_FILE_PATH="$__BU_MAIN_LIB_LANG_DIR_PATH/lang.csv"   # Bash Utils translations file.
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
-__BASH_UTILS_MAIN_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_MAIN_LIB_FUNCTS_MAIN_DIR_PATH/"*.lib )
+__BU_MAIN_FUNCTIONS_FILES_PATH=("$__BU_MAIN_LIB_FUNCTS_DIR_PATH/"*.lib )
 
 # -----------------------------------------------
 
@@ -64,25 +64,25 @@ __BASH_UTILS_MAIN_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_MAIN_LIB_FUNCTS_MAIN_DIR_
 ## INITIALIZATION VARIABLES DECLARATIONS
 
 # Initialization status.
-__BASH_UTILS_MAIN_INIT_IS_INITALIZING="true"
+__BU_MAIN_INIT_IS_INITALIZING="true"
 
 # Array of strings, to display in the log file with the date.
-__BASH_UTILS_MAIN_INIT_STR_ARRAY_LOG_DATE=()
-__BASH_UTILS_MAIN_INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__BASH_UTILS_MAIN_INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo "$v_cutstr"; done)"
+__BU_MAIN_INIT_STR_ARRAY_LOG_DATE=()
+__BU_MAIN_INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__BU_MAIN_INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo "$v_cutstr"; done)"
 
 # -----------------------------------------------
 
 ## LIBRARY INITALIZATION VARIABLES DECLARATIONS
 
 # Defining an associative array to store each sourced library file's path.
-__BASH_UTILS_MAIN_INIT_LIB_FILES_PATH_ARRAY=()
+__BU_MAIN_INIT_LIB_FILES_PATH_ARRAY=()
 
 # -----------------------------------------------
 
 ## CONFIGURATION FILES INITALIZATION VARIABLES DECLARATIONS
 
 # Defining an associative array to store each sourced configuration file's path.
-__BASH_UTILS_MAIN_INIT_CONFIG_FILES_PATH_ARRAY=()
+__BU_MAIN_INIT_CONFIG_FILES_PATH_ARRAY=()
 
 # Storing the configuration files path CheckTxtFmts values into an array to source, print and add easier into the "a_config_files_path" associative array.
 # Those files are, respectly, the :
@@ -95,11 +95,11 @@ __BASH_UTILS_MAIN_INIT_CONFIG_FILES_PATH_ARRAY=()
 # The "ProjectInit.conf" file MUST be sourced first, then the "ProjectStatus.conf" file MUST be sourced in the second.
 # Unless otherwise stated, the other configuration files may be sourced in any order.
 
-__BASH_UTILS_MAIN_INIT_LIST_CONFIG_FILES_PATH_ARRAY=("$__BASH_UTILS_MAIN_CONF_INIT_FILE_PATH" \
-    "$__BASH_UTILS_MAIN_CONF_STATUS_FILE_PATH" \
-    "$__BASH_UTILS_MAIN_CONF_COLORS_FILE_PATH" \
-    "$__BASH_UTILS_MAIN_CONF_FILE_FILE_PATH" \
-    "$__BASH_UTILS_MAIN_CONF_TIME_FILE_PATH")
+__BU_MAIN_INIT_LIST_CONFIG_FILES_PATH_ARRAY=("$__BU_MAIN_CONF_INIT_FILE_PATH" \
+    "$__BU_MAIN_CONF_STATUS_FILE_PATH" \
+    "$__BU_MAIN_CONF_COLORS_FILE_PATH" \
+    "$__BU_MAIN_CONF_TEXT_FILE_PATH" \
+    "$__BU_MAIN_CONF_TIME_FILE_PATH")
 
 # -----------------------------------------------
 
