--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -9,7 +9,7 @@
 ## COLUMNS
 
 # Get the columns number on the terminal according to its window's lenght
-__BU_MAIN_TXT_COLS="$(tput cols)"
+__BU_MOD_MAIN_TXT_COLS="$(tput cols)"
 
 # -----------------------------------------------
 
@@ -17,54 +17,54 @@ __BU_MAIN_TXT_COLS="$(tput cols)"
 
 # Caractère utilisé pour dessiner les lignes des headers. Si vous souhaitez mettre un autre caractère à la place d'un tiret, changez le caractère entre les double guillemets.
 # Ne mettez pas plus d'un caractère si vous ne souhaitez pas voir le texte de chaque header apparaître entre plusieurs lignes (une ligne de chaque caractère).
-__BU_MAIN_TXT_PRINT_HEADER_LINE_CHAR="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
+__BU_MOD_MAIN_TXT_PRINT_HEADER_LINE_CHAR="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
 
 
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
-__BU_MAIN_TXT_PRINT_TAB=">>>>"
+__BU_MOD_MAIN_TXT_PRINT_TAB=">>>>"
 
 # -----------------------------------------------
 
 ## STORING TEXT
 
 # Storing a string got from a specific line (with a function like "GetLineFromTextFile()", from "main/Files.lib" source file).
-__BU_MAIN_TXT_STORE_LINE=""
+__BU_MOD_MAIN_TXT_STORE_LINE=""
 
-__BU_MAIN_TXT_STORE_ERROR_MESSAGES_ARRAY=()
+__BU_MOD_MAIN_TXT_STORE_ERROR_MESSAGES_ARRAY=()
 
 # -----------------------------------------------
 
 ## TEXT FORMATTING
 
 # Blink
-__BU_MAIN_TXT_FMT_BLINK="$(CheckTextFormat 'blink' '5')"
-__BU_MAIN_TXT_FMT_BLINK_RESET="$(CheckTextFormat 'sgr0' '25')"
+__BU_MOD_MAIN_TXT_FMT_BLINK="$(CheckTextFormat 'blink' '5')"
+__BU_MOD_MAIN_TXT_FMT_BLINK_RESET="$(CheckTextFormat 'sgr0' '25')"
 
 # Bold
-__BU_MAIN_TXT_FMT_BOLD="$(CheckTextFormat 'bold' '1')"
-__BU_MAIN_TXT_FMT_BOLD_RESET="$(CheckTextFormat 'rmso' '21')"
+__BU_MOD_MAIN_TXT_FMT_BOLD="$(CheckTextFormat 'bold' '1')"
+__BU_MOD_MAIN_TXT_FMT_BOLD_RESET="$(CheckTextFormat 'rmso' '21')"
 
 # Dim
-__BU_MAIN_TXT_FMT_DIM="$(CheckTextFormat 'dim' '2')"
-__BU_MAIN_TXT_FMT_DIM_RESET="$(CheckTextFormat '' '22')"
+__BU_MOD_MAIN_TXT_FMT_DIM="$(CheckTextFormat 'dim' '2')"
+__BU_MOD_MAIN_TXT_FMT_DIM_RESET="$(CheckTextFormat '' '22')"
 
 # Hidden (useful for password typing).
-__BU_MAIN_TXT_FMT_HIDDEN="$(CheckTextFormat '' '8')"
-__BU_MAIN_TXT_FMT_HIDDEN_RESET="$(CheckTextFormat '' '28')"
+__BU_MOD_MAIN_TXT_FMT_HIDDEN="$(CheckTextFormat '' '8')"
+__BU_MOD_MAIN_TXT_FMT_HIDDEN_RESET="$(CheckTextFormat '' '28')"
 
 # Italic
-__BU_MAIN_TXT_FMT_ITALIC="$(CheckTextFormat 'sitm' '3')"
-__BU_MAIN_TXT_FMT_ITALIC_RESET="$(CheckTextFormat 'ritm' '23')"
+__BU_MOD_MAIN_TXT_FMT_ITALIC="$(CheckTextFormat 'sitm' '3')"
+__BU_MOD_MAIN_TXT_FMT_ITALIC_RESET="$(CheckTextFormat 'ritm' '23')"
 
 # Reset
-__BU_MAIN_TXT_FMT_RESET="$(CheckTextFormat 'sgr0' '0')"
+__BU_MOD_MAIN_TXT_FMT_RESET="$(CheckTextFormat 'sgr0' '0')"
 
 # Strikethrough
-__BU_MAIN_TXT_FMT_STRIKETHROUGH="$(CheckTextFormat '' '9')"
-__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(CheckTextFormat '' '29')"
+__BU_MOD_MAIN_TXT_FMT_STRIKETHROUGH="$(CheckTextFormat '' '9')"
+__BU_MOD_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(CheckTextFormat '' '29')"
 
 # Underline
-__BU_MAIN_TXT_FMT_UNDERLINE="$(CheckTextFormat 'smul' '4')"
-__BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(CheckTextFormat 'rmul' '24')"
+__BU_MOD_MAIN_TXT_FMT_UNDERLINE="$(CheckTextFormat 'smul' '4')"
+__BU_MOD_MAIN_TXT_FMT_UNDERLINE_RESET="$(CheckTextFormat 'rmul' '24')"
 
 # -----------------------------------------------
