Corrected a small bug with the detection of the path of the file which stores the Bash Utils library root folder's path

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -83,13 +83,13 @@ __BU_MAIN_INIT_LIB_FILES_PATH_ARRAY=()
 # Defining an associative array to store each sourced configuration file's path.
 __BU_MAIN_INIT_CONFIG_FILES_PATH_ARRAY=()
 
-# Storing the configuration files path CheckTxtFmts values into an array to source, print and add easier into the "a_config_files_path" associative array.
+# Storing the configuration files path variable values into an array to source, print and add easier into the "a_config_files_path" associative array.
 # Those files are, respectly, the :
-#   - Project's and initialization process global CheckTxtFmts
-#   - Project's status CheckTxtFmts
+#   - Project's and initialization process global variable
+#   - Project's status variable
 #   - Text color
-#   - Text decoration, formatting and printing CheckTxtFmts
-#   - Time CheckTxtFmts
+#   - Text decoration, formatting and printing variable
+#   - Time variable
 
 # The "ProjectInit.conf" file MUST be sourced first, then the "ProjectStatus.conf" file MUST be sourced in the second.
 # Unless otherwise stated, the other configuration files may be sourced in any order.
